force-app/main/default/objects/Ticket_Notification_Rule__mdt/Ticket_Notification_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Ticket Notification Rule</label>
    <pluralLabel>Ticket Notification Rules</pluralLabel>
</CustomObject>