force-app/main/default/objects/Ticket_Notification_Rule__mdt/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
                <default>true</default>
                <label>Requestor</label>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>