force-app/main/default/objects/Ticket_Notification_Rule__mdt/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>Client_Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>