force-app/main/default/objects/Ticket_Notification_Rule__mdt/fields/Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Developer_Name__c</fullName>
    <label>Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>